add prometheus config
