# api/openapi.yaml
@@ -172,6 +172,19 @@ paths:
               schema:
                 $ref: '#/components/schemas/Estadisticas_juego'
       x-swagger-router-controller: Usuarios
+  /metrics:
+      get:
+        tags:
+        - Usuarios
+        summary: Obtiene metricas de la api
+        description: Obtiene metricas de la api
+        operationId: getMetrics
+        responses:
+          "201":
+            description: item created
+          "400":
+            description: "invalid input, object invalid"
+        x-swagger-router-controller: Usuarios
 components:
   schemas:
     Usuario:
